tests/NormalTests/paczka1/small_fuzzy/34489921.err
Error in line 6: mgz A44 24,6
Error in line 10: XnriVliVKK S474 52,5
